Fixed sending csrf token in index

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Transcript Labelling</title>
     {% load static %}
+    {% csrf_token %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
